syntax = "proto3";

package nextdate;

option go_package = "github.com/Vova4o/todogrpc/nextdate/proto";

message TaskRequest {
    string search = 1;
}

message AllTasksResponse {
    string id = 1;
    string title = 2;
    string comment = 3;
    string date = 4;
    string repeat = 5;
}

service AllTasksService {
    rpc AllTasks(TaskRequest) returns (stream AllTasksResponse);
}

